--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,21 @@
 			<version>2.8.0</version>
 		</dependency>
 
+		<!-- Logger -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+
+		<!-- DataBase testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.1.210</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
