--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,6 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/tareas
 spring.datasource.username=root
 spring.datasource.password=fr3_Xt5$v3s
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
-
